--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -29,7 +29,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 23.1 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
+        <strong>Version 23.2 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
         <br/>
         <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)
         <br/>
@@ -1289,6 +1289,13 @@
       <a name="history" id="history">Version History</a>
     </h2>
     <div class="section">
+      <p>
+        <strong>Version 23.2 - 2017-12-24</strong>
+     </p>
+      <ul>
+		<li>Fix for SoA-based Tutu installs: only use of DisplayStringNoNameHead on ToB/EE engine installs, default to DisplayStringHead on SoA-Tutu.
+	  </ul>
+      <p>
       <p>
         <strong>Version 23.1 - 2017-12-03</strong>
      </p>
