EET compatibility and BGT fixes + readme updates
Native EET compatibility added (still in beta).
(BGT) Thalantyr will also give Kivan his spear if talked to later (BGT has an extra dialogue state that should be patched, too).
    (BGT) Various item fixes for BGT-BG1 items (instead of checking for the BGII versions).
    (BGT) Coran's wyvern quest: Coran's joined states will be patched corectly.
    Added table of changed component numbers if compared to v23.3 "Changed_component_numbers_v24.html" to /bg1npc_docs.
    Added install order for BGQE component "Brage's Sword" and Brage's Redemption to compatibility notes and updated links in readme.

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -2,7 +2,7 @@
 
 <p><strong><a href="http://www.gibberlings3.net/">A Gibberlings Three Mod</a></strong></p>
 
-<p><strong>Authors:</strong> <a href="http://gibberlings3.net/forums/?showtopic=1315">The BG1NPC Project Team</a>. Please contact us on the Gibberlings3 forums for more information.</p>
+<p><strong>Authors:</strong> <a href="https://www.gibberlings3.net/forums/topic/1315-credits/">The BG1NPC Project Team</a>. Please contact us on the Gibberlings3 forums for more information.</p>
 
 <p><strong>Project Coordinators (in temporal order):</strong>
 * <a href="http://gibberlings3.net/forums/?showuser=721">Blucher</a>
@@ -12,12 +12,15 @@
 * <a href="http://gibberlings3.net/forums/?showuser=844">cmorgan</a>
 * Currently: <a href="http://gibberlings3.net/forums/index.php?showuser=6858">AstroBryGuy</a></p>
 
-<p><strong>On the web: <a href="http://www.gibberlings3.net/bg1npc/">Home page</a></strong> and <strong><a href="http://gibberlings3.net/forums/index.php?showforum=45">discussion forum</a></strong>
-For support issues on a Tutu, EasyTutu, BGT, BGEE, or EET install, please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. For support issues on a BGT install involving Big Picture (<acronym title="Big Picture">BP</acronym> ) mods or Mega Installs, please contact <a href="http://www.spellholdstudios.net/">www.spellholdstudios.net</a>.</p>
+<p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
+For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. For support issues on a BGT install involving Big Picture (<acronym title="Big Picture">BP</acronym> ), please contact <a href="http://www.spellholdstudios.net/">www.spellholdstudios.net</a>.</p>
 
-<p><strong>Version</strong> 24.1 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&amp;showcat=11">Check for the most recent version</a>
-<strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)
+<p><strong>Version</strong> 24.2 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+</p>
+<strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)</p>
+<strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
 <strong>Platforms:</strong> Windows, Mac OS X, and Linux</p>
+
 
 <h2>Contents</h2>
 
@@ -56,17 +59,17 @@ For support issues on a Tutu, EasyTutu, BGT, BGEE, or EET install, please contac
 
 <h2>Overview</h2>
 
-<p>This mod expands on the depth of character and levels of interaction with the NPCs from the BG game. When BG2 was released, one of the major improvements in many peoples' eyes was the increased level of interaction one could have with the party members. This mod was developed to allow BG players a similar experience. NPCs in your party now have banters with the PC, with each other, and small side-quests of their own. As we were unable to get the original character voice actors to voice all the new lines, we instead sought out music appropriate to each NPC to be played whenever they initiate banter. This musical package is a separate, optional package (to keep the download size down) titled <em>The BG1NPC Music Pack</em>. You can find it on <a href="http://gibberlings3.net/forums/index.php?app=downloads&amp;showcat=11">The Gibberlings Three download page.</a></p>
+<p>This mod expands on the depth of character and levels of interaction with the NPCs from the BG game. When BG2 was released, one of the major improvements in many peoples' eyes was the increased level of interaction one could have with the party members. This mod was developed to allow BG players a similar experience. NPCs in your party now have banters with the PC, with each other, and small side-quests of their own. As we were unable to get the original character voice actors to voice all the new lines, we instead sought out music appropriate to each NPC to be played whenever they initiate banter. This musical package is a separate, optional package (to keep the download size down) titled <em>The BG1NPC Music Pack</em>. For link see below.</p>
 
 <h2>Compatibility</h2>
 
-<p>The BG1 NPC Project is compatible with Tutu (v4 or EasyTutu), BGT, Baldur's Gate Enhanced Edition (with or without Siege of Dragonspear), and EET.</p>
+<p>The BG1 NPC Project is compatible with Tutu (v4 or EasyTutu), BGT, and Baldur's Gate Enhanced Edition (with or without Siege of Dragonspear).</p>
 
 <p>BG1NPC uses WeiDU for mod installation. The Windows and Mac packages ship with WeiDU v246.</p>
 
 <p>BG1NPC is not currently compatible with Tutu v5 or v6. It might install, but is guaranteed to behave incorrectly. Don't say we didn't warn you. If you have legacy copies of these rebuilds, don't use them - Easytutu and Tutu v4 are the last confirmed workable platforms.</p>
 
-<p>Sword Coast Stratagems, EasyTutu, BGT, BG1NPC, and BG Unfinished Business have made special efforts to make sure players can use these mods together without conflict. In addition, we have adapted our code to allow concurrent use of Sirene's Call. Please visit the forums for more information, especially on install order.</p>
+<p>Sword Coast Stratagems, EasyTutu, BGT, BG1NPC, and BG Unfinished Business have made special efforts to make sure players can use these mods together without conflict. In addition, we have adapted our code to allow concurrent use of Sirene's Call. To play BG1NPC together with BGQE component "Barge's Sword" or Brage's Redemption Mod, the BGQE component "Barge's Sword" has to be installed before BG1NPC. With this, Brage's Redemption can be installed later. Without BGQE, BR should be installed before BG1NPC. Please visit the forums for more information, especially on install order.</p>
 
 <p>A discussion of install order and a list of compatible mods can be found in <a href="http://gibberlings3.net/forums/index.php?showtopic=8122">The Tutu State of the Modding Union</a> at the Gibberlings Three.</p>
 
@@ -94,7 +97,7 @@ For support issues on a Tutu, EasyTutu, BGT, BGEE, or EET install, please contac
 
 <p><strong>For Tutu/BGT installs:</strong> Download the latest version of WeiDU for Linux and extract (at least) the WeiDU, weinstall and tolower executables in a $PATH directory (e.g. /opt/bin). Following that, open a terminal, cd to your Tutu/BGT installation directory, run 'tolower' and answer Y to both queries. After that, run 'weinstall bg1npc' from your game installation directory to install or uninstall the mod.</p>
 
-<p><strong>For BGEE/EET installs:</strong> See <a href="http://gibberlings3.net/forums/index.php?showtopic=28516">The Linux User's Guide to Installing Mods on the Enhanced Editions</a>.</p>
+<p><strong>For BGEE/EET installs:</strong> See <a href="https://www.gibberlings3.net/forums/topic/28516-the-linux-users-guide-to-installing-mods-on-the-enhanced-editions/">The Linux User's Guide to Installing Mods on the Enhanced Editions</a>.</p>
 
 <h2>Components</h2>
 
@@ -174,13 +177,6 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>"Rationalized and Updated" in SixofSpades' BG1UB component</li>
 <li>"Dates and characterizations and entries extended" in SixofSpades' BG1NPC component</li>
 </ul>
-
-<h3>The BG1NPC Project: Check for TutuFix Walking Speeds</h3>
-
-<p><em>Tutu Only</em>
-This component can be used to match BG1 NPC -created actors/NPCs walking speeds to the default walking speeds if you have chosen to install TutuFix's Walking Speeds Component. It checks to see if Walking Speeds has modified the NPC Montaron, and then checks each BG1NPC -added creature you have installed to see if they qualify for the walking speed modification. If you have, it patches accordingly. If you have not installed TutuFix's Walking Speeds Component, no changes will be made. PLEASE NOTE: This component only checks BG1 NPC creatures. If you have added other mods, a better approach is to install the Walking Speeds component of TutuFix after all mods that add new quests, characters, or NPCs have been applied.</p>
-
-<p><strong>WARNING: Tutufix's Walking Speeds component has odd effects on the Polymorph, Haste, and Slow spells.</strong> Fixes for these odd behaviors are under development by the BG2 Tweaks team at <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>.</p>
 
 <h3>The BG1NPC Project: Kivan's "Kivan and Deheriana Companions" Portrait</h3>
 
@@ -277,7 +273,7 @@ This component can be used to match BG1 NPC -created actors/NPCs walking speeds 
 <li>Arian: writer</li>
 <li>Ascendency-Down: playtester</li>
 <li>Ascenscion64: coder</li>
-<li>AstroBryGuy: BGEE compatibility</li>
+<li>AstroBryGuy: BGEE and EET compatibility</li>
 <li>Aurelius: writer</li>
 <li>Baronius: coder</li>
 <li>berelinde: writer, coder, proofreader, troubleshooter, playtester</li>
@@ -324,7 +320,7 @@ This component can be used to match BG1 NPC -created actors/NPCs walking speeds 
 <li>INS-Hyacinth: proofreader</li>
 <li>Insolent Worm: proofreader</li>
 <li>Inuna: playtester</li>
-<li>jastey: writer, coder, proofreader, troubleshooter, playtester</li>
+<li>jastey: writer, coder, proofreader, troubleshooter, playtester, EET compatibility</li>
 <li>Jinnai: writer</li>
 <li>-JW-: troubleshooter, coder</li>
 <li>K.Lou of Combs: proofreader</li>
@@ -482,6 +478,10 @@ This component can be used to match BG1 NPC -created actors/NPCs walking speeds 
 
 <p><a href="http://athkatla.cob-bg.pl/viewtopic.php?t=5734">Children of Bhaal</a></p>
 
+<p><strong>German part translation:</strong></p>
+
+<p><a href="https://baldurs-gate.de/index.php">Kerzenburgforum</a></p>
+
 <ul>
 <li>Translators: Cuttooth (coordinator), Jinete, Miss misery, Chisette, Yennyfer, Krist Algar, Nero, Morgan, Christoff, Marlong, Parys, Craven, Dead, Thug Poet, Yarpen, Lord Pawel</li>
 <li>Proof readers: Cuttooth (coordinator), Kol (coordinator), Lua Nova, Claudiad, Morgan, Li, Jinete, Zireael, Soul Reaver, Picollo, Zed Nocear, Arientar, Tinuviel, Euler, Grazin</li>
@@ -500,27 +500,27 @@ This component can be used to match BG1 NPC -created actors/NPCs walking speeds 
 <a href="http://www.textpad.com/">WildEdit</a> purchased version 1.1 by Helios Software Solutions
 <a href="http://www.crimsoneditor.com/">Crimson Editor</a> by Ingyu Kang
 <a href="http://gibberlings3.net/forums/index.php?showforum=137"><acronym title="Dragonlance Total Conversion Editor Pro">DLTCEP</acronym></a> by Avenger
-<a href="http://iesdp.gibberlings3.net/"><acronym title="Infinity Engine Structures Description Project">IESDP</acronym></a> maintained by igi and Avenger
+<a href="https://gibberlings3.github.io/iesdp/main.htm"><acronym title="Infinity Engine Structures Description Project">IESDP</acronym></a> maintained by igi and Avenger
 <a href="http://infexp.sourceforge.net/">Infinity Explorer</a> by Dmitry Jemerov
-<a href="http://forums.pocketplane.net/index.php/topic,22727.msg297145.html#msg297145">Near Infinity</a> by Jon Olav Hauglid, FredSRichardson and devSin
+<a href="https://github.com/Argent77/NearInfinity/releases/tag/v2.1-20180615">Near Infinity</a> by Jon Olav Hauglid, FredSRichardson, devSin, and argent77
 <a href="http://www.mud-master.com/shadowkeeper/">Shadowkeeper</a> by Mud-Master
 <acronym title="Weimer Dialogue Utility"><a href="https://github.com/WeiDUorg/weidu/releases/latest">WeiDU</a></acronym> by Wes Weimer, the bigg, and Wisp (formerly at http://weidu.org)
 <a href="http://dev.gibberlings3.net/">WeiDU ConTEXT Highlighters</a> by Idobek, updated by cmorgan
 <a href="http://dev.gibberlings3.net/">WeiDU Crimson Editor Highlighters</a> by cmorgan
 <a href="http://dev.gibberlings3.net/">WeiDU TextPAD Highlighters</a> by cmorgan
 <a href="http://dev.gibberlings3.net/">WeiDU NotePad++ Highlighters</a> by mike 1072 and cmorgan
-<a href="http://forums.spellholdstudios.net/index.php?automodule=downloads&amp;showcat=9/">BGT</a> builds by Ascension64
+<a href="https://github.com/SpellholdStudios/BGT-WeiDU/releases">BGT</a> builds by Ascension64
 <a href="http://forums.spellholdstudios.net/index.php?automodule=downloads&amp;showcat=9/">Platform Conversion Utility</a> by Ascension64 for initial translation work to BGT
 <a href="http://www.pocketplane.net/tutu/">Tutu</a> by japheth, et. al
 <a href="http://www.usoutpost31.com/">EasyTutu builds</a> of Tutu by Macready</p>
 
-<p>Advanced users can follow BG1NPC or add to its development by following it on GitHub; <a href="https://github.com/cmorganbg/BG1NPC">https://github.com/cmorganbg/BG1NPC</a></p>
+<p>Advanced users can follow BG1NPC or add to its development by following it on GitHub; <a href="https://github.com/Gibberlings3/BG1NPC">https://github.com/cmorganbg/BG1NPC</a></p>
 
 <h2>Musical Themes Used</h2>
 
 <p>(those not listed are unknown)</p>
 
-<p>NOTE: To access this content, you will need to download and install the <em>The BG1<acronym title="Non-Player Characters">NPC</acronym>Music Pack</em>. You can find it on The Gibberlings Three download page, <a href="http://gibberlings3.net/forums/index.php?app=downloads&amp;showcat=11">here.</a></p>
+<p>NOTE: To access this content, you will need to download and install the <em>The BG1<acronym title="Non-Player Characters">NPC</acronym>Music Pack</em>. You can find it on The Gibberlings Three download page, <a href="https://www.gibberlings3.net/files/file/692-bg1-npc-project-music-pack/">here.</a></p>
 
 <ul>
 <li><strong>Ajantis:</strong> <em>Federation Mission Failure</em> (from Star Trek: Starfleet Command) by Ron Jones</li>
@@ -546,11 +546,25 @@ This component can be used to match BG1 NPC -created actors/NPCs walking speeds 
 
 <h2>Contact and Copyright Information</h2>
 
-<p>A complete list of contributors is maintained at our forum. Visit the <a href="http://gibberlings3.net/forums/">Gibberlings Three forums</a> for information on this and any other Gibberlings Three mods on which we may be working. The current maintainer/coordinator is <a href="http://gibberlings3.net/forums/?showuser=844">cmorgan</a></p>
+<p>A complete list of contributors is maintained at our forum. Visit the <a href="http://gibberlings3.net/forums/">Gibberlings Three forums</a> for information on this and any other Gibberlings Three mods on which we may be working.</p>
 
 <p>The BG1NPC Project is not developed, supported, or endorsed by BioWare™, Interplay/BlackIsle, Beamdog, or Wizards of the Coast. The Tutu mod was created by Japheth, aided by Ghreyfain, SimDing0, and Kish. EasyTutu was created by Macready, based on a Baldurdashed (Kevin Dorner) version of Tutu v4 Fixpack 15. If there are any copyright issues or this statement needs revision then please contact one of us and advise us what to do about it. This mod was created to be freely enjoyed by all Baldur's Gate and Baldur's Gate II players. However, it should not be sold, published, compiled or redistributed in any form without the consent of the team leaders.</p>
 
 <h2>Version History</h2>
+
+<p><strong>Version 24.2 - 2020-01-20</strong></p>
+
+<ul>
+<li>Native EET compatibility added (still in beta).</li>
+<li>Ajantis should not attack if PC gives Kirinhale's lock to Riggilo after the succubus is already dead.</li>
+<li>Added silent = 1 to item patching to suppress warnings and prevent component to be shown as "installed with warnings"</li>
+<li>(BGT) Thalantyr will also give Kivan his spear if talked to later (BGT has an extra dialogue state that should be patched, too).</li>
+<li>(BGT) Various item fixes for BGT-BG1 items (instead of checking for the BGII versions).</li>
+<li>(BGT) Coran's wyvern quest: Coran's joined states will be patched corectly.</li>
+<li>Added table of changed component numbers if compared to v23.3 "Changed_component_numbers_v24.html" to /bg1npc_docs.</li>
+<li>Added install order for BGQE component "Brage's Sword" and Brage's Redemption to compatibility notes and updated links in readme.</li>
+<li>Removed hint to look for support for megainstalls at SHS from installation prompts.</li>
+</ul>
 
 <p><strong>Version 24.1 - 2020-01-16</strong></p>
 
@@ -564,8 +578,8 @@ This component can be used to match BG1 NPC -created actors/NPCs walking speeds 
 <li>Xzar's Quest: druids should all walk towards him and not talk while still outside the visual range (changed MoveToObject("blackberry) to MoveToObject"Xzar") in their scripts.</li>
 <li>FIx Minsc checks in INGOT interjection</li>
 <li>Update stringref to use an index that points to "Talk" for both BGEE and Tutu/BGT (bg1npc_chall.tpa)</li>
-<li>Fixing bug in Branwen-Tranzig encounter</li>
-<li>Fixing bug in last Dynahier (romanced) Winski encounter (Tanar'ti should initiate dialogue with Winski)</li>
+<li>Fixed bug in Branwen-Tranzig encounter</li>
+<li>Fixed bug in last Dynahier (romanced) Winski encounter (Tanar'ti should initiate dialogue with Winski)</li>
 <li>Updates for Jaheira's Quest (changes to x#jabe1.baf, x#beador.cre).</li>
 <li>p#wolf01.cre: Make winter wolf pelt unstealable.</li>
 <li>Remove duplicate items from Karris' lackey's inventories. (bg1npc_tiaxqst.tpa)</li>
