changed Dynaheir's PID to use CLERIC_CURE_LIGHT_WOUNDS
Changed spell used by Dynaheir in PID to CLERIC_CURE_LIGHT_WOUNDS because it fits the dialogue better and for compatibility with EET.

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -552,6 +552,12 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <h2>Version History</h2>
 
+<p><strong>Version 24.3 - 2020-xx-xx</strong></p>
+
+<ul>
+<li>Changed spell used by Dynaheir in PID to CLERIC_CURE_LIGHT_WOUNDS because it fits the dialogue better and for compatibility with EET.</li>
+</ul>
+
 <p><strong>Version 24.2 - 2020-01-20</strong></p>
 
 <ul>
