--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -15,7 +15,7 @@
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
 For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. For support issues on a BGT install involving Big Picture (<acronym title="Big Picture">BP</acronym> ), please contact <a href="http://www.spellholdstudios.net/">www.spellholdstudios.net</a>.</p>
 
-<p><strong>Version</strong> 24.2 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 24.3 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -552,7 +552,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <h2>Version History</h2>
 
-<p><strong>Version 24.3 - 2020-xx-xx</strong></p>
+<p><strong>Version 24.3 - 2020-02-09</strong></p>
 
 <ul>
 <li>Changed spell used by Dynaheir in PID to CLERIC_CURE_LIGHT_WOUNDS because it fits the dialogue better and for compatibility with EET.</li>
