--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -5,17 +5,17 @@
 <p><strong>Authors:</strong> <a href="https://www.gibberlings3.net/forums/topic/1315-credits/">The BG1NPC Project Team</a>. Please contact us on the Gibberlings3 forums for more information.</p>
 
 <p><strong>Project Coordinators (in temporal order):</strong>
-* <a href="http://gibberlings3.net/forums/?showuser=721">Blucher</a>
-* <a href="http://gibberlings3.net/forums/?showuser=62">Kish</a>
-* <a href="http://gibberlings3.net/forums/?showuser=30">Andyr</a>
-* <a href="http://gibberlings3.net/forums/?showuser=142">Domi</a>
-* <a href="http://gibberlings3.net/forums/?showuser=844">cmorgan</a>
-* Currently: <a href="http://gibberlings3.net/forums/index.php?showuser=6858">AstroBryGuy</a></p>
+* <a href="https://www.gibberlings3.net/profile/721-blucher/">Blucher</a>
+* <a href="https://www.gibberlings3.net/profile/62-kish/">Kish</a>
+* <a href="https://www.gibberlings3.net/profile/30-andyr/">Andyr</a>
+* <a href="https://www.gibberlings3.net/profile/142-domi/">Domi</a>
+* <a href="https://www.gibberlings3.net/profile/844-cmorgan/">cmorgan</a>
+* Currently: <a href="https://www.gibberlings3.net/profile/6858-astrobryguy/">AstroBryGuy</a>, <a href="https://www.gibberlings3.net/profile/256-jastey/">jastey</a></p>
 
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
 For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. For support issues on a BGT install involving Big Picture (<acronym title="Big Picture">BP</acronym> ), please contact <a href="http://www.spellholdstudios.net/">www.spellholdstudios.net</a>.</p>
 
-<p><strong>Version</strong> 24.5 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 24.6 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -551,6 +551,14 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <p>The BG1NPC Project is not developed, supported, or endorsed by BioWare™, Interplay/BlackIsle, Beamdog, or Wizards of the Coast. The Tutu mod was created by Japheth, aided by Ghreyfain, SimDing0, and Kish. EasyTutu was created by Macready, based on a Baldurdashed (Kevin Dorner) version of Tutu v4 Fixpack 15. If there are any copyright issues or this statement needs revision then please contact one of us and advise us what to do about it. This mod was created to be freely enjoyed by all Baldur's Gate and Baldur's Gate II players. However, it should not be sold, published, compiled or redistributed in any form without the consent of the team leaders.</p>
 
 <h2>Version History</h2>
+
+<p><strong>Version 24.6 - 2020-04-15</strong></p>
+
+<ul>
+<li>x#keth.cre should not have nonexistent items assigned to item slots (should not throw error messages or stop install in SCS "Smarter AI" component).</li>
+<li>Coran's "stop random flirt" option should not deactivate all romance related PID options.</li>
+<li>Deactivated Smart I_C_T Function until further revision.</li>
+</ul>
 
 <p><strong>Version 24.5 - 2020-04-06</strong></p>
 
