--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -552,6 +552,14 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <h2>Version History</h2>
 
+<p><strong>Version 24.7 - 2020-05-14</strong></p>
+
+<ul>
+<li>Coran should initiate dialogue one game day after Briel received book of curses. (Timer mixup between ingame/realtime corrected.)</li>
+<li>Second Minsc-Dynaheir rest banter should also trigger rest if Imoen is not in party.</li>
+<li>Coran will no longer leave the party for good with the cook in Cloakwood mines.</li>
+</ul>
+
 <p><strong>Version 24.6 - 2020-04-15</strong></p>
 
 <ul>
