--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -15,7 +15,7 @@
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
 For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. For support issues on a BGT install involving Big Picture (<acronym title="Big Picture">BP</acronym> ), please contact <a href="http://www.spellholdstudios.net/">www.spellholdstudios.net</a>.</p>
 
-<p><strong>Version</strong> 24.8 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 24.9 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -59,11 +59,11 @@ For support issues please contact <a href="http://www.gibberlings3.net/">www.gib
 
 <h2>Overview</h2>
 
-<p>This mod expands on the depth of character and levels of interaction with the NPCs from the BG game. When BG2 was released, one of the major improvements in many peoples' eyes was the increased level of interaction one could have with the party members. This mod was developed to allow BG players a similar experience. NPCs in your party now have banters with the PC, with each other, and small side-quests of their own. As we were unable to get the original character voice actors to voice all the new lines, we instead sought out music appropriate to each NPC to be played whenever they initiate banter. This musical package is a separate, optional package (to keep the download size down) titled <em>The BG1NPC Music Pack</em>. For link see below.</p>
+<p>This mod expands on the depth of character and levels of interaction with the BioWare NPCs from the BG game. When BG2 was released, one of the major improvements in many peoples' eyes was the increased level of interaction one could have with the party members. This mod was developed to allow BG players a similar experience. NPCs in your party now have banters with the PC, with each other, and small side-quests of their own. As we were unable to get the original character voice actors to voice all the new lines, we instead sought out music appropriate to each NPC to be played whenever they initiate banter. This musical package is a separate, optional package (to keep the download size down) titled <em>The BG1NPC Music Pack</em>. For link see below.</p>
 
 <h2>Compatibility</h2>
 
-<p>The BG1 NPC Project is compatible with Tutu (v4 or EasyTutu), BGT, and Baldur's Gate Enhanced Edition (with or without Siege of Dragonspear).</p>
+<p>The BG1 NPC Project is compatible with Tutu (v4 or EasyTutu), BGT, and Baldur's Gate Enhanced Edition (with or without Siege of Dragonspear), and EET.</p>
 
 <p>BG1NPC uses WeiDU for mod installation. The Windows and Mac packages ship with WeiDU v246.</p>
 
@@ -71,7 +71,7 @@ For support issues please contact <a href="http://www.gibberlings3.net/">www.gib
 
 <p>Sword Coast Stratagems, EasyTutu, BGT, BG1NPC, and BG Unfinished Business have made special efforts to make sure players can use these mods together without conflict. In addition, we have adapted our code to allow concurrent use of Sirene's Call. To play BG1NPC together with BGQE component "Barge's Sword" or Brage's Redemption Mod, the BGQE component "Barge's Sword" has to be installed before BG1NPC. With this, Brage's Redemption can be installed later. Without BGQE, BR should be installed before BG1NPC. Please visit the forums for more information, especially on install order.</p>
 
-<p>A discussion of install order and a list of compatible mods can be found in <a href="http://gibberlings3.net/forums/index.php?showtopic=8122">The Tutu State of the Modding Union</a> at the Gibberlings Three.</p>
+<p>A discussion of install order and a list of compatible mods for Tutu can be found in <a href="http://gibberlings3.net/forums/index.php?showtopic=8122">The Tutu State of the Modding Union</a> at the Gibberlings Three.</p>
 
 <p>For BGT, a discussion of install order and a list of compatible mods can be found by checking <a href="http://www.shsforums.net/index.php?showtopic=19539">Spellhold Studios forums: compatibility</a> and looking for specific install order recommendations elsewhere on the forums, notably <a href="http://www.shsforums.net/index.php?showforum=193">Mega Mod Help</a> and projects like BiG World Project (BWP). Even if you are not playing a Mega Mod install, these are the places where people have experimented with install orders using BG1NPC on BGT games.</p>
 
@@ -551,6 +551,14 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <p>The BG1NPC Project is not developed, supported, or endorsed by BioWare™, Interplay/BlackIsle, Beamdog, or Wizards of the Coast. The Tutu mod was created by Japheth, aided by Ghreyfain, SimDing0, and Kish. EasyTutu was created by Macready, based on a Baldurdashed (Kevin Dorner) version of Tutu v4 Fixpack 15. If there are any copyright issues or this statement needs revision then please contact one of us and advise us what to do about it. This mod was created to be freely enjoyed by all Baldur's Gate and Baldur's Gate II players. However, it should not be sold, published, compiled or redistributed in any form without the consent of the team leaders.</p>
 
 <h2>Version History</h2>
+
+<p><strong>Version 24.9 - 2020-08-03</strong></p>
+
+<ul>
+<li>Tiax no longer leaves in anger although his quest was solved to his liking.</li>
+<li>Russian translation revised and corrected (wrong format for some files).</li>
+<li>Added bg1npc.ini to support ALIEN's Project Inifnity.</li>
+</ul>
 
 <p><strong>Version 24.8 - 2020-05-14</strong></p>
 
