--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -15,7 +15,7 @@
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
 For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. For support issues on a BGT install involving Big Picture (<acronym title="Big Picture">BP</acronym> ), please contact <a href="http://www.spellholdstudios.net/">www.spellholdstudios.net</a>.</p>
 
-<p><strong>Version</strong> 24.9 - <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 25 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -487,6 +487,8 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>Proof readers: Cuttooth (coordinator), Kol (coordinator), Lua Nova, Claudiad, Morgan, Li, Jinete, Zireael, Soul Reaver, Picollo, Zed Nocear, Arientar, Tinuviel, Euler, Grazin</li>
 </ul>
 
+<p><strong>Italian translation: by Coland</strong></p>
+
 <p><strong>Tools Used in Creation</strong>
 <a href="http://www.jedit.org/">jEdit</a> Programmer's Editor, a fantastic free world-wide project
 <a href="http://winmerge.org/">WinMerge</a> <acronym title="GNU's Not Unix">GNU</acronym> freeware file comparison utility, developed: Grim; Project Lead: List
@@ -551,6 +553,21 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <p>The BG1NPC Project is not developed, supported, or endorsed by BioWare™, Interplay/BlackIsle, Beamdog, or Wizards of the Coast. The Tutu mod was created by Japheth, aided by Ghreyfain, SimDing0, and Kish. EasyTutu was created by Macready, based on a Baldurdashed (Kevin Dorner) version of Tutu v4 Fixpack 15. If there are any copyright issues or this statement needs revision then please contact one of us and advise us what to do about it. This mod was created to be freely enjoyed by all Baldur's Gate and Baldur's Gate II players. However, it should not be sold, published, compiled or redistributed in any form without the consent of the team leaders.</p>
 
 <h2>Version History</h2>
+
+<p><strong>Version 25 - 2020-12-09</strong></p>
+
+<ul>
+<li>Italien translation added by Coland.</li>
+<li>Corrected morning after dialogue for Ajatnis romance: should not trigger next lovetalk in addition.</li>
+<li>Fixed reference to Imoen's script name for EET in "x#bgreplace_bgee.d".</li>
+<li>Shar_teel will also notice falling of a ranger/paladin if the PC meets the same requirements for CHA/STR as for romance (both greater than 10).</li>
+<li>Kivan's dialogue after the Montaron-Ender incident will not loop.</li>
+<li>Added OUTDOOR check to Jaheira's dialogue about nature.</li>
+<li>Coran's romance should not be blocked if Xan's broke after being committed.</li>
+<li>Boomerang Dagger +2 for BG:EE is now EET version (not old BGII).</li>
+<li>typo correction(s).</li>
+<li>Added Dynamic Install Order categories to bg1npc.ini to support ALIEN's Project Infinity.</li>
+</ul>
 
 <p><strong>Version 24.9 - 2020-08-03</strong></p>
 
