--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -13,9 +13,9 @@
 * Currently: <a href="https://www.gibberlings3.net/profile/6858-astrobryguy/">AstroBryGuy</a>, <a href="https://www.gibberlings3.net/profile/256-jastey/">jastey</a></p>
 
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
-For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. For support issues on a BGT install involving Big Picture (<acronym title="Big Picture">BP</acronym> ), please contact <a href="http://www.spellholdstudios.net/">www.spellholdstudios.net</a>.</p>
+For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. </p>
 
-<p><strong>Version</strong> 25 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 26 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -69,7 +69,7 @@ For support issues please contact <a href="http://www.gibberlings3.net/">www.gib
 
 <p>BG1NPC is not currently compatible with Tutu v5 or v6. It might install, but is guaranteed to behave incorrectly. Don't say we didn't warn you. If you have legacy copies of these rebuilds, don't use them - Easytutu and Tutu v4 are the last confirmed workable platforms.</p>
 
-<p>Sword Coast Stratagems, EasyTutu, BGT, BG1NPC, and BG Unfinished Business have made special efforts to make sure players can use these mods together without conflict. In addition, we have adapted our code to allow concurrent use of Sirene's Call. To play BG1NPC together with BGQE component "Barge's Sword" or Brage's Redemption Mod, the BGQE component "Barge's Sword" has to be installed before BG1NPC. With this, Brage's Redemption can be installed later. Without BGQE, BR should be installed before BG1NPC. Please visit the forums for more information, especially on install order.</p>
+<p>Sword Coast Stratagems, EasyTutu, BGT, BG1NPC, and BG Unfinished Business have made special efforts to make sure players can use these mods together without conflict. In addition, we have adapted our code to allow concurrent use of Sirene's Call. To play BG1NPC together with BGQE component "Brage's Sword" or Brage's Redemption Mod, the BGQE component "Brage's Sword" has to be installed before BG1NPC. With this, Brage's Redemption can be installed later. Without BGQE, Brage's Redemption should be installed before BG1NPC. Please visit the forums for more information, especially on install order.</p>
 
 <p>A discussion of install order and a list of compatible mods for Tutu can be found in <a href="http://gibberlings3.net/forums/index.php?showtopic=8122">The Tutu State of the Modding Union</a> at the Gibberlings Three.</p>
 
@@ -178,6 +178,14 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>"Dates and characterizations and entries extended" in SixofSpades' BG1NPC component</li>
 </ul>
 
+<h3>The BG1 NPC Project: Kivan's Proficiency</h3>
+
+<p>This component will give a choice to alter Kivan's weapon proficiency pips to either halberds or spears. This is interesting insofar, as the quest item Kivan receives from Thalatyr is a spear, whereas he comes with pips in halberd in BG:EE.</p>
+
+<p>Option one: Kivan uses spears. This option will give Kivan 2 pips in spears, and also replace two halberds in teh game with spears (one in the cave in Dryad Falls, another in the Cloakwood Mines level 3.</p>
+
+<p>Option two: Kivan uses halberds. This option will give Kivan 2 pips in halberds.</p>
+
 <h3>The BG1NPC Project: Kivan's "Kivan and Deheriana Companions" Portrait</h3>
 
 <p>This component will give Kivan his portrait from Domi's mod, for those wanting consitency for the entire saga.</p>
@@ -259,12 +267,15 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li><strong>Domi</strong> : Coordinator</li>
 <li><strong>Andyr</strong> : Putting-together person</li>
 <li><strong>cmorgan</strong> : Wrapup and modernization Coordinator, traification, cross platform implementation</li>
+<li><strong>AstroBryGuy</strong> : BGEE and EET compatibility</li>
+<li><strong>jastey</strong> : EET compatibility</li>
 </ul>
 
 <p><strong>Project Contributors (in alphabetical order)</strong></p>
 
 <ul>
 <li>Ajnos: playtester</li>
+<li>Angel: coder</li>
 <li>Amazing Maurice: writer</li>
 <li>Amgot: playtester</li>
 <li>Andrew: playtester</li>
@@ -362,7 +373,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>Sgàth: proofreader</li>
 <li>Shed: proofreader</li>
 <li>Sir BillyBob: coder, proofreader, troubleshooter</li>
-<li>Sir-Kill: coder</li>
+<li>Sir-Kill: BAM artist</li>
 <li>smoketest: coder</li>
 <li>Sphira: writer</li>
 <li>Tancred: writer</li>
@@ -478,14 +489,15 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <p><a href="http://athkatla.cob-bg.pl/viewtopic.php?t=5734">Children of Bhaal</a></p>
 
-<p><strong>German part translation:</strong></p>
-
-<p><a href="https://baldurs-gate.de/index.php">Kerzenburgforum</a></p>
-
 <ul>
 <li>Translators: Cuttooth (coordinator), Jinete, Miss misery, Chisette, Yennyfer, Krist Algar, Nero, Morgan, Christoff, Marlong, Parys, Craven, Dead, Thug Poet, Yarpen, Lord Pawel</li>
 <li>Proof readers: Cuttooth (coordinator), Kol (coordinator), Lua Nova, Claudiad, Morgan, Li, Jinete, Zireael, Soul Reaver, Picollo, Zed Nocear, Arientar, Tinuviel, Euler, Grazin</li>
 </ul>
+
+
+<p><strong>German part translation:</strong></p>
+
+<p><a href="https://baldurs-gate.de/index.php">Kerzenburgforum</a></p>
 
 <p><strong>Italian translation: by Coland</strong></p>
 
@@ -553,6 +565,24 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <p>The BG1NPC Project is not developed, supported, or endorsed by BioWare™, Interplay/BlackIsle, Beamdog, or Wizards of the Coast. The Tutu mod was created by Japheth, aided by Ghreyfain, SimDing0, and Kish. EasyTutu was created by Macready, based on a Baldurdashed (Kevin Dorner) version of Tutu v4 Fixpack 15. If there are any copyright issues or this statement needs revision then please contact one of us and advise us what to do about it. This mod was created to be freely enjoyed by all Baldur's Gate and Baldur's Gate II players. However, it should not be sold, published, compiled or redistributed in any form without the consent of the team leaders.</p>
 
 <h2>Version History</h2>
+
+<p><strong>Version 26 - 2021-05-16</strong></p>
+
+<ul>
+<li>New component: "Kivan's Proficiency Tweak", by Angel</li>
+<li>Kivan should count Gerde's ankheg kills correctly.</li>
+<li>Kivan should not reference Prism in Mutamin's garden if he didn't meet Prism.</li>
+<li>Ajantis should not ask Shoal to revive the companion if they didn't die.</li>
+<li>Faldorn should correctly banter with Kagain.</li>
+<li>"Read Gorion's letter" will also trigger in Candlekeep Catacombs.</li>
+<li>"KnowBhaal" variable will only set after letter was read aloud if Gorion's letter is in party's inventory.</li>
+<li>EET: Tana'ri should be copied to override.</li>
+<li>revised Ajantis' shield colors and BAMs from Sir Kill.</li>
+<li>corrected entry for "Beregost_House08_L2" in cmpvars.tpa.</li>
+<li>Russian version now uses setup.tra out of English language folder.</li>
+<li>added check to forbid installation after EET_End.</li>
+<li>Typo corrections.</li>
+</ul>
 
 <p><strong>Version 25 - 2020-12-09</strong></p>
 
