--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -577,6 +577,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>"Read Gorion's letter" will also trigger in Candlekeep Catacombs.</li>
 <li>"KnowBhaal" variable will only set after letter was read aloud if Gorion's letter is in party's inventory.</li>
 <li>EET: Tana'ri should be copied to override.</li>
+<li>Compatibility with Shades of the Sword Coast: Bentley will only react to Eldoth if he can see him.</li>
 <li>revised Ajantis' shield colors and BAMs from Sir Kill.</li>
 <li>corrected entry for "Beregost_House08_L2" in cmpvars.tpa.</li>
 <li>Russian version now uses setup.tra out of English language folder.</li>
