--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -574,8 +574,10 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>Kivan should not reference Prism in Mutamin's garden if he didn't meet Prism.</li>
 <li>Ajantis should not ask Shoal to revive the companion if they didn't die.</li>
 <li>Faldorn should correctly banter with Kagain.</li>
+<li>Halbazzer's dialogue for upgrading the armor should not block his dialogue.</li>
 <li>"Read Gorion's letter" will also trigger in Candlekeep Catacombs.</li>
 <li>"KnowBhaal" variable will only set after letter was read aloud if Gorion's letter is in party's inventory.</li>
+<li>Journal entry for Garrick's quest should close properly for all language versions.</li>
 <li>EET: Tana'ri should be copied to override.</li>
 <li>Compatibility with Shades of the Sword Coast: Bentley will only react to Eldoth if he can see him.</li>
 <li>revised Ajantis' shield colors and BAMs from Sir Kill.</li>
