--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -17,7 +17,7 @@ For support issues please contact <a href="http://www.gibberlings3.net/">www.gib
 
 <p><strong>Version</strong> 26 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
-<strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)</p>
+<strong>Languages:</strong> English, Spanish, French, Polish, Italian, Russian, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
 <strong>Platforms:</strong> Windows, Mac OS X, and Linux</p>
 
@@ -500,6 +500,8 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <p><a href="https://baldurs-gate.de/index.php">Kerzenburgforum</a></p>
 
 <p><strong>Italian translation: by Coland</strong></p>
+
+<p><strong>Russian translation: by Aerie Team & Arcanecoast Team</strong></p>
 
 <p><strong>Tools Used in Creation</strong>
 <a href="http://www.jedit.org/">jEdit</a> Programmer's Editor, a fantastic free world-wide project
