--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -568,7 +568,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <h2>Version History</h2>
 
-<p><strong>Version 26 - 2021-05-16</strong></p>
+<p><strong>Version 26 - 2021-05-25</strong></p>
 
 <ul>
 <li>New component: "Kivan's Proficiency Tweak", by Angel</li>
@@ -586,13 +586,14 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>corrected entry for "Beregost_House08_L2" in cmpvars.tpa.</li>
 <li>Russian version now uses setup.tra out of English language folder.</li>
 <li>added check to forbid installation after EET_End.</li>
+<li>Updated bg1npc.ini with regard to install order syntax.</li>
 <li>Typo corrections.</li>
 </ul>
 
 <p><strong>Version 25 - 2020-12-09</strong></p>
 
 <ul>
-<li>Italien translation added by Coland.</li>
+<li>Italian translation added by Coland.</li>
 <li>Corrected morning after dialogue for Ajatnis romance: should not trigger next lovetalk in addition.</li>
 <li>Fixed reference to Imoen's script name for EET in "x#bgreplace_bgee.d".</li>
 <li>Shar_teel will also notice falling of a ranger/paladin if the PC meets the same requirements for CHA/STR as for romance (both greater than 10).</li>
