--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -573,7 +573,8 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <ul>
 <li>Corrected install order syntax for compatibility with Framed Mod in bg1npc.ini.</li>
 <li>Corrected all apostrophes so EEs will not choke on symbols.</li>
-<li>Remved wrong references in custom areas so browsing the files will not give confusing results.</li>
+<li>Removed wrong references in custom areas so browsing the files will not give confusing results.</li>
+<li>Added globally unqie LABELs to support Project Infinity.</li>
 </ul>
 
 <p><strong>Version 26 - 2021-05-25</strong></p>
