Acknowledge sounds authors.

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -492,6 +492,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <ul>
 <li>Translators: Cuttooth (coordinator), Jinete, Miss misery, Chisette, Yennyfer, Krist Algar, Nero, Morgan, Christoff, Marlong, Parys, Craven, Dead, Thug Poet, Yarpen, Lord Pawel</li>
 <li>Proof readers: Cuttooth (coordinator), Kol (coordinator), Lua Nova, Claudiad, Morgan, Li, Jinete, Zireael, Soul Reaver, Picollo, Zed Nocear, Arientar, Tinuviel, Euler, Grazin</li>
+<li>Additional sounds: Anoim2666 (coordinator), Joshua Szpilarski (Drizzt dubbing)</li>
 </ul>
 
 
