--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -15,7 +15,7 @@
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
 For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. </p>
 
-<p><strong>Version</strong> 27.1 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 28 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, Italian, Russian, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -569,10 +569,22 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <h2>Version History</h2>
 
+<p><strong>Version 28 - 2022-06-15</strong></p>
+
+<ul>
+<li>Italian translation of PIDs completed, by improb@bile.</li>
+<li>German translation for Coran, Kivan, and Xan finished, by Belryll.</li>
+<li>"ar2700.bcs" loop bug in EE should not affect BG1NPC (Gorion burial, Dynaheir romance).</li>
+<li>Kivan should react if Tazok is killed, also if it's after Sarevok's death with EndlessBG1 or Transitions.</li>
+<li>EE: Description of Kivan's bow usability now mentions "Kivan" (not in capital letters).</li>
+<li>Removed Tutu item reference from cre (Coran romance challenge).</li>
+<li>AJROM_TIMER patching in gtime.ids should not be skipped for C#AJROM_TIMER from Ajantis BG2.</li>
+</ul>
+
 <p><strong>Version 27.1 - 2021-07-28</strong></p>
 
 <ul>
-<li>Dryads should acknowledge woodcutters' deathd with Xzar in party.</li>
+<li>Dryads should acknowledge woodcutters' death with Xzar in party.</li>
 </ul>
 
 <p><strong>Version 27 - 2021-07-14</strong></p>
