--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -574,11 +574,20 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <ul>
 <li>Italian translation of PIDs completed, by improb@bile.</li>
 <li>German translation for Coran, Kivan, and Xan finished, by Belryll.</li>
-<li>"ar2700.bcs" loop bug in EE should not affect BG1NPC (Gorion burial, Dynaheir romance).</li>
+<li>French translation completed, by Mickaël Leduque.</li>
+<li>Polish only: Drizzt dubbing thanks to Anoim2666. Voice of Joshua Szpilarski.</li>
+<li>Polish translation: typo and small corrections, by Roberciiik.</li>
+<li>"ar2700.bcs" loop bug in EE should not affect BG1NPC (Gorion burial, Dynaheir romance end scene).</li>
 <li>Kivan should react if Tazok is killed, also if it's after Sarevok's death with EndlessBG1 or Transitions.</li>
+<li>Enable Imoen's Artifact polymorph effect: Allow the polymorph effect to happen by fixing the IDS value; Add lighting/sound effects when polymorph wears off; Change polymorph duration from 1200 (4 hours) to 12 (2 rounds); Change spell name to clarify effect impermanence: Polymorph Other -> Temporary Polymorph.</li>
+<li>Corrected some EET compatibility oversights.</li>
+<li>EE: Added name reference to item_use.2da for Ajantis' shield.</li>
 <li>EE: Description of Kivan's bow usability now mentions "Kivan" (not in capital letters).</li>
 <li>Removed Tutu item reference from cre (Coran romance challenge).</li>
 <li>AJROM_TIMER patching in gtime.ids should not be skipped for C#AJROM_TIMER from Ajantis BG2.</li>
+<li>Crossmod Compatibility with MPTweaks: Ajantis reacting to doppelgangers should not interfere with MPTweaks ability to pause the game for multiplayer sessions.</li>
+<li></li>
+<li>Typos and other small corrections.</li>
 </ul>
 
 <p><strong>Version 27.1 - 2021-07-28</strong></p>
