--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -15,7 +15,7 @@
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
 For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. </p>
 
-<p><strong>Version</strong> 28 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 29 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, Italian, Russian, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -568,6 +568,17 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <p>The BG1NPC Project is not developed, supported, or endorsed by BioWare™, Interplay/BlackIsle, Beamdog, or Wizards of the Coast. The Tutu mod was created by Japheth, aided by Ghreyfain, SimDing0, and Kish. EasyTutu was created by Macready, based on a Baldurdashed (Kevin Dorner) version of Tutu v4 Fixpack 15. If there are any copyright issues or this statement needs revision then please contact one of us and advise us what to do about it. This mod was created to be freely enjoyed by all Baldur's Gate and Baldur's Gate II players. However, it should not be sold, published, compiled or redistributed in any form without the consent of the team leaders.</p>
 
 <h2>Version History</h2>
+
+<p><strong>Version 29 - 2022-06-18</strong></p>
+
+<ul>
+<li>Fixed install error for some languages (missing new text line added).</li>
+<li>German version: Kivan's lines revised, by Belryll.</li>
+<li>Russian version: Two missing lines translated, by yota13.</li>
+<li>Romances: "Do not flirt with me anymore" will only disable the repetitive NPC initiated flirts. Not any PID options. Not the individual flirty dialogues. Romances without any repetitive flirts should not have this dialogue option.</li>
+<li>Fixed reference to PC's class in one of Copran's lovetalks.</li>
+<li>Fixed dlg reference in Xan-Alora banter (Alora should say her line).</li>
+</ul>
 
 <p><strong>Version 28 - 2022-06-15</strong></p>
 
