reinserted "NPC wait at inn" component

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -145,6 +145,38 @@ For support issues please contact <a href="http://www.gibberlings3.net/">www.gib
 
 <p>This component expands the romance options and content for female characters being courted by Coran, Ajantis, and/or Xan. It only appears for female characters who have two or three of these NPCs in their party.</p>
 
+<h3>The BG1NPC Project: NPCs Can Be Sent to Wait in an Inn</h3>
+
+      <p>
+        </strong> <em>not compatible with BGT. After being removed for v24, the component was restored for v29. It was not yet thoroughly tested for the EE v2.6 (BG:EE, BG:SoD, EET) and is in beta status.</em>
+        <br/>
+        This component allows BG NPCs to be sent to an Inn, another location, or to wait for you when you dismiss them from the party. This component is most likely not compatible with other mods that will make NPCs go to or wait at specific places, e.g. "BG NPCs go to inns" from Tweaks Anthology. Do not install mod components that conflict. In the BG1NPC version, slightly different waiting places are used, and NPCs will highly dislike being abandoned alone in dangerous areas...<br />
+		NPC waiting locations:
+        <ul>
+		<li>Ajantis - Friendly Arm Inn or Elfsong Tavern
+		<li>Alora - Friendly Arm Inn or Elfsong Tavern
+		<li>Branwen - Friendly Arm Inn or Elfsong Tavern
+		<li>Coran - Belching Dragon in Nashkel or Elfsong Tavern
+		<li>Dynaheir/Minsc - Friendly Arm Inn or Elfsong Tavern
+		<li>Edwin - Belching Dragon in Nashkel or Low Lantern
+		<li>Eldoth/Skie - Feldpost's Inn or Elfsong Tavern
+		<li>Faldorn - Cloakwood (what, you think she'd wait in an inn?)
+		<li>Garrick - Friendly Arm Inn or Elfsong Tavern
+		<li>Imoen - Friendly Arm Inn or Elfsong Tavern
+        <li>Jaheria/Khalid - Friendly Arm Inn or Elfsong Tavern
+		<li>Kagain - His store or Blusing Mermaid
+		<li>Kivan - Friendly Arm Inn or Elfsong Tavern
+		<li>Montaron/Xzar - Belching Dragon in Nashkel or Low Lantern
+		<li>Quayle - Friendly Arm Inn or Elfsong Tavern
+		<li>Safana - Belching Dragon in Nashkel or Elfsong Tavern
+		<li>Shar-Teel - Belching Dragon in Nashkel or Blushing Mermaid
+		<li>Viconia - A cave on the South Beregost Road or Blushing Mermaid
+		<li>Xan - Friendly Arm Inn or Elfsong Tavern
+		<li>Yeslick - Friendly Arm Inn or Elfsong Tavern
+		</ul>
+      </p>
+
+
 <h3>Jason Compton's Accelerated Banter Script</h3>
 
 <p><em>Tutu, BGT Only</em>
@@ -573,8 +605,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <ul>
 <li>Fixed install error for some languages (missing new text line added).</li>
-<li>German version: Kivan's lines revised, by Belryll.</li>
-<li>Russian version: Two missing lines translated, by yota13.</li>
+<li>Kivan's lines revised, by Belryll.</li>
 <li>Romances: "Do not flirt with me anymore" will only disable the repetitive NPC initiated flirts. Not any PID options. Not the individual flirty dialogues. Romances without any repetitive flirts should not have this dialogue option.</li>
 <li>Fixed reference to PC's class in one of Copran's lovetalks.</li>
 <li>Fixed dlg reference in Xan-Alora banter (Alora should say her line).</li>
