--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -601,9 +601,10 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <h2>Version History</h2>
 
-<p><strong>Version 29 - 2022-06-18</strong></p>
+<p><strong>Version 29 - 2022-06-20</strong></p>
 
 <ul>
+<li>Reinserted the component "NPCs Can Be Sent to Wait in an Inn" which was removed for v24.</li>
 <li>Fixed install error for some languages (missing new text line added).</li>
 <li>Kivan's lines revised, by Belryll.</li>
 <li>Romances: "Do not flirt with me anymore" will only disable the repetitive NPC initiated flirts. Not any PID options. Not the individual flirty dialogues. Romances without any repetitive flirts should not have this dialogue option.</li>
