--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -610,6 +610,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>Romances: "Do not flirt with me anymore" will only disable the repetitive NPC initiated flirts. Not any PID options. Not the individual flirty dialogues. Romances without any repetitive flirts should not have this dialogue option.</li>
 <li>Fixed reference to PC's class in one of Copran's lovetalks.</li>
 <li>Fixed dlg reference in Xan-Alora banter (Alora should say her line).</li>
+<li>Fixed reference to PC for quest character in Kivan's encounter.</li>
 </ul>
 
 <p><strong>Version 28 - 2022-06-15</strong></p>
