Fixed spell level for spwi401 in nythrun_fixes.tpa.

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -611,6 +611,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>Fixed reference to PC's class in one of Copran's lovetalks.</li>
 <li>Fixed dlg reference in Xan-Alora banter (Alora should say her line).</li>
 <li>Fixed reference to PC for quest character in Kivan's encounter.</li>
+<li>Fixed spell level for spwi401 in nythrun_fixes.tpa.</li>
 </ul>
 
 <p><strong>Version 28 - 2022-06-15</strong></p>
