--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -608,7 +608,7 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <li>Fixed install error for some languages (missing new text line added).</li>
 <li>Kivan's lines revised, by Belryll.</li>
 <li>Romances: "Do not flirt with me anymore" will only disable the repetitive NPC initiated flirts. Not any PID options. Not the individual flirty dialogues. Romances without any repetitive flirts should not have this dialogue option.</li>
-<li>Fixed reference to PC's class in one of Copran's lovetalks.</li>
+<li>Fixed reference to PC's class in one of Coran's lovetalks.</li>
 <li>Fixed dlg reference in Xan-Alora banter (Alora should say her line).</li>
 <li>Fixed reference to PC for quest character in Kivan's encounter.</li>
 <li>Fixed spell level for spwi401 in nythrun_fixes.tpa.</li>
