--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -15,7 +15,7 @@
 <p><strong>On the web: <a href="https://www.gibberlings3.net/mods/npcs/bg1npc/">Home page</a></strong> and <strong><a href="https://www.gibberlings3.net/forums/forum/45-bg1-npc-project/">discussion forum</a></strong>
 For support issues please contact <a href="http://www.gibberlings3.net/">www.gibberlings3.net</a>. </p>
 
-<p><strong>Version</strong> 29.1 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
+<p><strong>Version</strong> 30 <a href="https://www.gibberlings3.net/files/file/908-bg1-npc-project/">Check for the most recent version</a>
 </p>
 <strong>Languages:</strong> English, Spanish, French, Polish, Italian, Russian, German* (teilweise noch in englisch)</p>
 <strong>Games:</strong> BG:EE, Tutu (with or without TotSC), BGT, and EET</p>
@@ -601,10 +601,12 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 
 <h2>Version History</h2>
 
-<p><strong>Version 29.1 - 2022-07-08</strong></p>
+<p><strong>Version 30 - 2022-07-11</strong></p>
 
 <ul>
-<li>EET: fixed Edwin/Minsc interjections.</li>
+<li>EET: fixed Edwin/Minsc interjections (interjection into Edwin's BG1 greeting dialogue should not be patched to his BG2 dialogue).</li>
+<li>BGT, Tutu; Xzar dryad quest: journal entries should close.</li>
+<li>Jaheira druid quest: Removed leftover Tutu item references from X#Baedor.cre. Removed unused x#baedo1.cre from mod ressources.</li>
 </ul>
 
 <p><strong>Version 29 - 2022-06-20</strong></p>
