--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -604,6 +604,8 @@ This component utilizes the new BANTTIMG.2DA file available in BGEE to adjust ba
 <p><strong>Version 31 - ##</strong></p>
 
 <ul>
+<li>corrected text reference for reply option in x#faint.d.</li>
+<li>removed redundant SetGlobal in x#viint.d (not needed for I_C_T)</li>
 <li>Specific Imoen-Ajantis banter should not fire when Ajantis romance is committed.</li>
 <li>Corrected Ajantis flirts for engaged case.</li>
 <li>Typo correction.</li>
